# oglrender

./: .gitignore  CMakeLists.txt
src/oglrender/: app.cpp  app.h  main.cpp  window.cpp  window.h
